--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -2,18 +2,48 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>Django Tailwind</title>
+    <title>Cv Pam</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		{% tailwind_css %}
 	</head>
-
-	<body class="bg-gray-50 font-serif leading-normal tracking-normal">
-		<div class="container mx-auto">
-			<section class="flex items-center justify-center h-screen">
-				<h1 class="text-5xl">Django + Tailwind = ❤️</h1>
-			</section>
+	<header class="text-gray-400 bg-gray-900 body-font">
+		<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+		  <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+			
+			<h1 class="">CVPAM</h1>
+		  </a>
+		  <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-700	flex flex-wrap items-center text-base justify-center">
+			<a class="mr-5 hover:text-white">Akèy</a>
+			<a class="mr-5 hover:text-white">Curriculum vitae</a>
+			<a class="mr-5 hover:text-white">Kontak</a>
+		  </nav>
+		  <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">login
+			<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+			  <path d="M5 12h14M12 5l7 7-7 7"></path>
+			</svg>
+		  </button>
 		</div>
-	</body>
+	  </header>
+      <section class="text-gray-400 bg-gray-900 body-font">
+		<div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+		  <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+			<h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">
+			  <br class="hidden lg:inline-block">Kreye yon cv profesyonèl nan mwens ke 5 minit
+			</h1>
+			<p class="mb-8 leading-relaxed">avek systèm nou an ou ka kreye yon cv nan yon ti kras tan e gen yon cv profesyonèl ki prezantab nan tout antrepriz.</p>
+			<div class="flex justify-center">
+			  <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Komanse</button>
+			  <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Kontakte nou</button>
+			</div>
+		  </div>
+		  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+			<img class="object-cover object-center rounded" alt="hero" src="../static/hero.jpg">
+		  </div>
+		</div>
+	  </section>
+	{% block content%}
+
+	{% endblock %}
 </html>
