--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -7,6 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		{% tailwind_css %}
+		{% block bootstrap%}
+		{% endblock %}
 	</head>
 	<header class="text-gray-400 bg-gray-900 body-font">
 		<div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
@@ -26,23 +28,7 @@
 		  </button>
 		</div>
 	  </header>
-      <section class="text-gray-400 bg-gray-900 body-font">
-		<div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-		  <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-			<h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white">
-			  <br class="hidden lg:inline-block">Kreye yon cv profesyonèl nan mwens ke 5 minit
-			</h1>
-			<p class="mb-8 leading-relaxed">avek systèm nou an ou ka kreye yon cv nan yon ti kras tan e gen yon cv profesyonèl ki prezantab nan tout antrepriz.</p>
-			<div class="flex justify-center">
-			  <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Komanse</button>
-			  <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Kontakte nou</button>
-			</div>
-		  </div>
-		  <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-			<img class="object-cover object-center rounded" alt="hero" src="../static/hero.jpg">
-		  </div>
-		</div>
-	  </section>
+   
 	{% block content%}
 
 	{% endblock %}
